# api-data-pipeline

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: instructions.md  makefile.md  terraform.md
iac/: .terraform.lock.hcl  artifacts.tf  bigquery.tf  compute.tf  main.tf  outputs.tf  providers.tf  sa.tf  ssh_keys.tf  startup.sh  storage.tf  terraform.tfvars.template  variables.tf
src/dbt/earthquake_transformations/: dbt_project.yml
src/dbt/earthquake_transformations/models/: schema.yml
src/dbt/earthquake_transformations/models/mart/: daily_earthquake_summary.sql  geo_earthquake_analysis.sql
src/dbt/earthquake_transformations/models/raw/: raw_earthquakes.sql
src/dbt/earthquake_transformations/models/staging/: stg_earthquakes.sql
src/earthquake_pipeline/: api_to_bq_gcs_stg.py  rest_api_pipeline.py
src/earthquake_pipeline/.dlt/: config.toml
src/files/: api_to_bq_gcs_stg.py  rest_api_pipeline.py
src/flows/: eq-proj_api-to-bq-gcs-stg.yml  eq-proj_api-to-gcs.yml
src/kestra/: docker-compose.yml
src/kestra/files/: ingest_data.py
src/kestra/flows/: eq-proj_api-to-bq-gcs-stg.yml  eq-proj_dbt.yml
src/locals/: api_to_bq_gcs_stg.py  gcs_to_bq.py
